# hathor-red

./: .codeowners  .dockerignore  .editorconfig  .env  .env.example  .eslintrc.cjs  .gitignore  .sentryclirc  AGENTS.md  API.md  ARCHITECTURAL_BLUEPRINT_COMPLETE.md  ARCHITECTURE.md  AUTOMATION_OPPORTUNITIES_ANALYSIS.md  AUTOMATION_PATTERNS_REFERENCE.md  BEST_IN_WORLD_FEATURES.md  BUGS.md  CLAUDE.md  CONTRIBUTING.md  DEEP_DIVE.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LIMITATIONS.md  MASTERY_ROADMAP.md  MERGE_RECOMMENDATIONS.md  Makefile  PRODUCTION_READY.md  PROJECT_PLAN.md  PR_REVIEW_ANALYSIS.md  QUICKSTART.md  QUICK_START_IMPLEMENTATION.md  README.md  SECURITY.md  cloudbuild.cd.prod.yaml  (+25 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.husky/: pre-commit
campaign/: ad1_immersive.html  ad2_features.html  ad3_collab.html
client/: package-lock.json  package.json  pnpm-lock.yaml
cloudbuild/: cd.prod.yaml  cd.stg.yaml  ci.yaml  deploy-prod.yaml  deploy-stg.yaml  pr-ci.yaml
colab/: colab_ai_brain.py
current-state-doc-tool/: Makefile  README.md  pyproject.toml
current-state-doc-tool/.github/workflows/: ci.yml
current-state-doc-tool/app/: api.py  auth_api.py  cli.py  db.py  deps.py  logging_setup.py  main.py  models.py  otel.py  rbac.py  reports.py  schemas.py  security.py  services.py  settings.py  ui.py
current-state-doc-tool/app/templates/: home.html
current-state-doc-tool/tests/: test_auth.py  test_wsjf.py
(+195 files in other folders)
