[project]
name = "current-state-doc-tool"
version = "0.1.0"
description = "Evidence-driven current-state documentation tool (inventory, component status, WSJF, risk register, BRD/DevSpec generator)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.21",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
